--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_height="200dp"
         android:layout_marginTop="25sp"
         android:gravity="center"
-        android:background="@drawable/card_background"
+        android:background="@drawable/question_card_background"
         android:elevation="5dp"
         android:textColor="@color/black"
         android:text="Who is the 44th President of the United States?"
@@ -24,8 +24,10 @@
         android:layout_width="match_parent"
         android:visibility="invisible"
         android:layout_height="200dp"
+        android:layout_marginTop="25sp"
         android:gravity="center"
-        android:background="#ffe100"
+        android:background="@drawable/answer_card_background"
+        android:textColor="@color/black"
         android:text="Barack Obama"
         android:textSize="45sp" />
 
@@ -64,5 +66,13 @@
         android:textColor="@color/black"
         android:text="Barack Obama"
         android:textSize="30sp" />
+
+    <ImageView
+        android:id="@+id/flashcard_add_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/icon_add"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"/>
 
 </RelativeLayout>
