Added optional features 1, 2 and 3. User can edit current card, see error message if Q or A is empty, and Snackbar notification upon creating a new card.

--- a/app/src/main/res/drawable/answer_card_background.xml
+++ b/app/src/main/res/drawable/answer_card_background.xml
@@ -3,5 +3,5 @@
     android:shape="rectangle">
     <corners android:radius="40dp" />
     <stroke android:color="#e9a33b" android:width="6dp" />
-    <solid android:color="#E9C766" />
+    <solid android:color="#F9F766" />
 </shape>
