--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,4 +75,12 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"/>
 
+    <ImageView
+        android:id="@+id/flashcard_edit_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/icon_edit"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"/>
+
 </RelativeLayout>
