Added optional features 4 and 5. User can enter multiple answers. Answer card color has been detailed.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="my_red_color">#ee0000</color>
     <color name="my_green_color">#b1dc4f</color>
+    <color name="my_tan">#FFD293</color>
 </resources>
