--- a/app/src/main/res/layout/activity_add_card.xml
+++ b/app/src/main/res/layout/activity_add_card.xml
@@ -15,13 +15,32 @@
         android:inputType="textMultiLine" />
 
     <EditText
-        android:id="@+id/flashcard_edit_answer"
+        android:id="@+id/flashcard_edit_rightanswer"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:layout_margin="20dp"
         android:layout_below="@id/flashcard_edit_question"
         android:hint="Enter The Answer Here"
         android:inputType="textMultiLine" />
+
+    <EditText
+        android:id="@+id/flashcard_edit_wronganswer1"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_margin="20dp"
+        android:layout_below="@id/flashcard_edit_rightanswer"
+        android:hint="Enter A Wrong Answer Here"
+        android:inputType="textMultiLine" />
+
+    <EditText
+        android:id="@+id/flashcard_edit_wronganswer2"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_margin="20dp"
+        android:layout_below="@id/flashcard_edit_wronganswer1"
+        android:hint="Enter Another Wrong Answer Here"
+        android:inputType="textMultiLine" />
+
 
     <ImageView
         android:id="@+id/flashcard_cancel_button"
