--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
     <TextView
         android:id="@+id/answer_option_one"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="50dp"
         android:layout_below="@id/flashcard_question_textview"
         android:layout_marginTop="100sp"
         android:gravity="center"
@@ -46,7 +46,7 @@
     <TextView
         android:id="@+id/answer_option_two"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="50dp"
         android:layout_below="@id/answer_option_one"
         android:layout_marginTop="25sp"
         android:gravity="center"
@@ -58,7 +58,7 @@
     <TextView
         android:id="@+id/answer_option_three"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="50dp"
         android:layout_below="@id/answer_option_two"
         android:layout_marginTop="25sp"
         android:gravity="center"
@@ -82,5 +82,14 @@
         android:src="@drawable/icon_edit"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"/>
+
+    <ImageView
+        android:id="@+id/flashcard_next_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/icon_next"
+        android:layout_below="@id/flashcard_question_textview"
+        android:layout_marginTop="25sp"
+        android:layout_alignParentEnd="true"/>
 
 </RelativeLayout>
