--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="my_red_color">#ee0000</color>
     <color name="my_green_color">#b1dc4f</color>
     <color name="my_tan">#FFD293</color>
+    <color name='pink'>#FFC0CB</color>
 </resources>
